Add phpunit to project

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,7 @@ fabric.properties
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+.phpunit.result.cache
+###< phpunit/phpunit ###
