--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+*.pdf
 
 # Created by https://www.gitignore.io/api/git,linux,symfony,phpunit,composer,phpstorm
 # Edit at https://www.gitignore.io/?templates=git,linux,symfony,phpunit,composer,phpstorm
