--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "league/tactician-bundle": "^1.2",
         "moneyphp/money": "^3.3",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
