--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,39 +27,39 @@ services:
     # please note that last definitions always *replace* previous ones
 
     ## handlers
-    Task\App\Cart\Application\CreateNewCartHandler:
-        class: Task\App\Cart\Application\CreateNewCartHandler
-        arguments:
-            $products: '@repo' # todo
-        tags:
-            - { name: tactician.handler, typehints: true }
-    Task\App\Cart\Application\AddProductToCartHandler:
-        class: Task\App\Cart\Application\AddProductToCartHandler
-        arguments:
-            $products: '@repo' # todo
-        tags:
-            - { name: tactician.handler, typehints: true }
-    Task\App\Cart\Application\RemoveProductFromCartHandler:
-        class: Task\App\Cart\Application\RemoveProductFromCartHandler
-        arguments:
-            $products: '@repo' # todo
-        tags:
-            - { name: tactician.handler, typehints: true }
-    Task\App\Catalogue\Application\CreateNewProductHandler:
-        class: Task\App\Catalogue\Application\CreateNewProductHandler
-        arguments:
-            $products: '@repo' # todo
-        tags:
-            - { name: tactician.handler, typehints: true }
-    Task\App\Catalogue\Application\RemoveProductHandler:
-        class: Task\App\Catalogue\Application\RemoveProductHandler
-        arguments:
-            $products: '@repo' # todo
-        tags:
-            - { name: tactician.handler, typehints: true }
-    Task\App\Catalogue\Application\EditProductHandler:
-        class: Task\App\Catalogue\Application\EditProductHandler
-        arguments:
-            $products: '@repo' # todo
-        tags:
-            - { name: tactician.handler, typehints: true }
+#    Task\App\Cart\Application\CreateNewCartHandler:
+#        class: Task\App\Cart\Application\CreateNewCartHandler
+#        arguments:
+#            $products: '@repo' # todo
+#        tags:
+#            - { name: tactician.handler, typehints: true }
+#    Task\App\Cart\Application\AddProductToCartHandler:
+#        class: Task\App\Cart\Application\AddProductToCartHandler
+#        arguments:
+#            $products: '@repo' # todo
+#        tags:
+#            - { name: tactician.handler, typehints: true }
+#    Task\App\Cart\Application\RemoveProductFromCartHandler:
+#        class: Task\App\Cart\Application\RemoveProductFromCartHandler
+#        arguments:
+#            $products: '@repo' # todo
+#        tags:
+#            - { name: tactician.handler, typehints: true }
+#    Task\App\Catalogue\Application\CreateNewProductHandler:
+#        class: Task\App\Catalogue\Application\CreateNewProductHandler
+#        arguments:
+#            $products: '@repo' # todo
+#        tags:
+#            - { name: tactician.handler, typehints: true }
+#    Task\App\Catalogue\Application\RemoveProductHandler:
+#        class: Task\App\Catalogue\Application\RemoveProductHandler
+#        arguments:
+#            $products: '@repo' # todo
+#        tags:
+#            - { name: tactician.handler, typehints: true }
+#    Task\App\Catalogue\Application\EditProductHandler:
+#        class: Task\App\Catalogue\Application\EditProductHandler
+#        arguments:
+#            $products: '@repo' # todo
+#        tags:
+#            - { name: tactician.handler, typehints: true }
