--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=976b69cf646db57e85d66a25dd34c576
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=postgresql://user:topsecret@psqldb:5432/public
 ###< doctrine/doctrine-bundle ###
