Implement Catalogue UI layer

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,7 @@ fabric.properties
 ###> phpunit/phpunit ###
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
