--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/orm-pack": "^1.0",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "webmozart/assert": "^1.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.1"
+        "phpunit/phpunit": "^9.1",
+        "symfony/web-server-bundle": "^4.4.2"
     },
     "config": {
         "preferred-install": {
